--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
               <thead>
                 <tr>
                   <th>ใบ</th>
-                  <th id="after_accurate">ความถูกต้อง</th>
+                  <th id="this_accurate">ความถูกต้อง</th>
                 </tr>
               </thead>
               <tbody id="results">
